--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,16 @@ Flask==0.11
 Jinja2==2.8
 MarkupSafe==0.23
 Werkzeug==0.11.10
+cffi==1.6.0
 click==6.6
+cryptography==1.3.2
+gevent==1.1.1
+gevent-websocket==0.9.5
+greenlet==0.4.9
+idna==2.1
 itsdangerous==0.24
+paramiko==2.0.0
+pyasn1==0.1.9
+pycparser==2.14
+six==1.10.0
 wssh==0.1.0
