--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,25 @@
 Flask==0.11
+Flask-SQLAlchemy==2.1
+Flask-WTF==0.12
 Jinja2==2.8
 MarkupSafe==0.23
+SQLAlchemy==1.0.14
+WTForms==2.1
 Werkzeug==0.11.10
+argparse==1.2.1
 cffi==1.6.0
 click==6.6
 cryptography==1.3.2
+enum34==1.1.6
 gevent==1.1.1
 gevent-websocket==0.9.5
 greenlet==0.4.9
 idna==2.1
+ipaddress==1.0.16
 itsdangerous==0.24
 paramiko==2.0.0
 pyasn1==0.1.9
 pycparser==2.14
 six==1.10.0
+wsgiref==0.1.2
 wssh==0.1.0
