--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 Flask==0.11
+Flask-Migrate==2.0.0
 Flask-SQLAlchemy==2.1
+Flask-Script==2.0.5
 Flask-WTF==0.12
 Jinja2==2.8
+Mako==1.0.4
 MarkupSafe==0.23
 SQLAlchemy==1.0.14
 WTForms==2.1
 Werkzeug==0.11.10
+alembic==0.8.7
 argparse==1.2.1
 cffi==1.6.0
 click==6.6
@@ -20,6 +24,7 @@ itsdangerous==0.24
 paramiko==2.0.0
 pyasn1==0.1.9
 pycparser==2.14
+python-editor==1.0.1
 six==1.10.0
 wsgiref==0.1.2
 wssh==0.1.0
