--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ idna==2.1
 ipaddress==1.0.16
 itsdangerous==0.24
 paramiko==2.0.0
+psycopg2==2.6.1
 pyasn1==0.1.9
 pycparser==2.14
 python-editor==1.0.1
