--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==0.11
+Flask-KVSession==0.6.2
 Flask-Migrate==2.0.0
 Flask-SQLAlchemy==2.1
 Flask-Script==2.0.5
@@ -27,6 +28,8 @@ psycopg2==2.6.1
 pyasn1==0.1.9
 pycparser==2.14
 python-editor==1.0.1
+redis==2.10.5
+simplekv==0.10.0
 six==1.10.0
 wsgiref==0.1.2
 wssh==0.1.0
