--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==0.11
 Flask-KVSession==0.6.2
+Flask-Mail==0.9.1
 Flask-Migrate==2.0.0
 Flask-SQLAlchemy==2.1
 Flask-Script==2.0.5
@@ -13,6 +14,7 @@ Werkzeug==0.11.10
 alembic==0.8.7
 argparse==1.2.1
 bcrypt==3.1.0
+blinker==1.4
 cffi==1.6.0
 click==6.6
 cryptography==1.3.2
