--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ bcrypt==3.1.0
 blinker==1.4
 cffi==1.6.0
 click==6.6
-cryptography==1.3.2
+cryptography==1.4
 enum34==1.1.6
 gevent==1.1.1
 gevent-websocket==0.9.5
@@ -25,13 +25,22 @@ greenlet==0.4.9
 idna==2.1
 ipaddress==1.0.16
 itsdangerous==0.24
+ndg-httpsclient==0.4.2
 paramiko==2.0.0
+pbr==1.10.0
 psycopg2==2.6.1
+pyOpenSSL==16.0.0
 pyasn1==0.1.9
 pycparser==2.14
+pylxd==2.0.3
+python-dateutil==2.5.3
 python-editor==1.0.1
 redis==2.10.5
+requests==2.11.1
+requests-unixsocket==0.1.5
 simplekv==0.10.0
 six==1.10.0
+urllib3==1.16
+ws4py==0.3.4
 wsgiref==0.1.2
 wssh==0.1.0
