Move term to use xterm.js, handled by node deps

--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "gulp-concat": "~2.6.0",
     "gulp-uglify": "~2.0.0",
     "gulp-sass": "~2.3.2"
+  },
+  "dependencies": {
+    "xterm": "~1.1.3"
   }
 }
