--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-sass": "~2.3.2"
   },
   "dependencies": {
-    "xterm": "~1.1.3"
+    "xterm": "~1.1.3",
+    "normalize.css": "~4.2.0"
   }
 }
