Fix paths for downloading files from containers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build: docker/app
     volumes:
       - .:/var/app/project
+      - /var/lib/lxd/containers/:/var/app/files:ro
     depends_on:
       - postgres
       - redis
