Update build files to build current version

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,7 +1,6 @@
-FROM alpine:3.4
+FROM alpine:3.6
 
 RUN mkdir /var/app \
- && echo "@edge http://nl.alpinelinux.org/alpine/edge/main" >> /etc/apk/repositories \
  && apk update \
  && apk upgrade \
  && apk add bash \
@@ -13,13 +12,12 @@ RUN mkdir /var/app \
             make \
             musl-dev \
             nodejs \
-            openssl \
-            openssl-dev \
+            nodejs-npm \
             pcre-dev \
             postgresql-dev \
-            python2@edge \
-            python2-dev@edge \
-            py2-pip@edge \
+            python2 \
+            python2-dev \
+            py2-pip \
  && npm install -g gulp
 
 COPY ["start.sh", "set_host.sh", "cert.crt", "cert.key", "/var/app/"]
